Bug 104650 - Progress bar is not removed after DOCX open error
Summary: Progress bar is not removed after DOCX open error
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.4.2 release
Hardware: All All
: medium normal
Assignee: tagezi
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords: difficultyBeginner, easyHack, needsDevEval, skillCpp
Depends on:
Blocks: File-Progress-Bar
  Show dependency treegraph
 
Reported: 2016-12-13 17:42 UTC by Mike Kaganski
Modified: 2025-06-24 09:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2016-12-13 17:42:31 UTC
If opening some DOCX files failed, the "Loading document..." green progress bar is not hidden after the error message is closed and LibreOffice returns to Start Center.

To reproduce, open LibreOffice Start Center, and try to open e.g. attachment 121706 [details]. After SAXParseException message is shown and dismissed, the progress bar stays.

The problem is in OOXMLDocumentImpl::resolve.
Suggested approach is to use RAII.

Marking as easyhack.
Comment 1 tagezi 2016-12-13 18:50:13 UTC
I confirm it
Comment 2 jani 2016-12-21 09:00:44 UTC Comment hidden (obsolete)
Comment 3 Arnold Dumas 2017-02-13 09:09:26 UTC
Working on it
Comment 4 jani 2017-05-14 07:43:20 UTC Comment hidden (obsolete)
Comment 5 Xisco Faulí 2017-06-14 02:22:38 UTC Comment hidden (obsolete)
Comment 6 Xisco Faulí 2017-07-17 02:19:54 UTC Comment hidden (obsolete)
Comment 7 Xisco Faulí 2017-08-17 02:25:19 UTC Comment hidden (obsolete)
Comment 8 Xisco Faulí 2017-09-17 02:04:50 UTC Comment hidden (obsolete)
Comment 9 Commit Notification 2017-12-07 07:28:03 UTC
tagezi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=58e4b36ace484f2743a3b9919d830c175464b05d

tdf#104650 Creating guard to reset status indicator

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2017-12-07 10:20:54 UTC
tagezi committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=89853de3231e92a17a646acb7f99584220fadad8&h=libreoffice-6-0

tdf#104650 Creating guard to reset status indicator

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.