tdf#104650 - Progress bar is not removed after DOCX open error

Change-Id: Ic1e79badedc031a588c0b07958002ad7c558ba82